# TeslaUniDash

./: README.md  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  test.yml
tesla_dashcam/: __init__.py  __version__.py  constants.py  tesla_dashcam.py  version.py
tesla_dashcam/layouts/: __init__.py  base.py  cross.py  diamond.py  fullscreen.py  grid.py  widescreen.py
tesla_dashcam/utils/: camera.py  font.py
