[project]
name = "teslaunidash"
version = "0.12.21"
description = "Tesla Dashcam video processing utility"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Erik Hendrix", email = "ehendrix23@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "python-dateutil>=2.8.1,<2.9.0",
    "tzlocal>=2.1,<3.0",
    "requests>=2.24.0,<3.0.0",
    "psutil>=5.7.2,<6.0.0",
    "staticmap>=0.5.5,<0.6.0",
]

[project.optional-dependencies]
windows = [
    "win10toast==0.9",
]
dev = [
    "wheel>=0.37.0",
    "sphinx>=4.1.2",
]
build = [
    "pyinstaller>=4.5.1",
]

[project.urls]
Homepage = "https://github.com/ehendrix23/tesla_dashcam"
Documentation = "https://github.com/ehendrix23/tesla_dashcam/blob/master/README.md"
Repository = "https://github.com/ehendrix23/tesla_dashcam.git"
Issues = "https://github.com/ehendrix23/tesla_dashcam/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tesla_dashcam/__version__.py"
pattern = "VERSION = {.*}"

[tool.hatch.build.targets.wheel]
packages = ["tesla_dashcam"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
